--- a/resource/sass/default/_common.scss
+++ b/resource/sass/default/_common.scss
@@ -2,4 +2,6 @@ $CONTAINER_SIZE: 1000px;
 $THEME_COLOR: #00bcd4;
 $THEME_BORDER: #006064;
 $ITEM_BACKGROUND_COLOR: lighten(#E0F7FA, 6%);
+$DISABLED_COLOR: #eee;
+$ERROR_COLOR: #fcc;
 
