--- a/www/css/default/detail.css
+++ b/www/css/default/detail.css
@@ -272,4 +272,151 @@
       margin: 3px;
       list-style-type: decimal; }
 
-/*# sourceMappingURL=preview.css.map */
+#surveyBox {
+  border: 1px solid #00bcd4;
+  padding: 9px;
+  margin-top: 10px;
+  margin-bottom: 10px; }
+  #surveyBox h1 {
+    margin: 0; }
+
+.survey-setting-detail .page-settings {
+  font-size: 0.875rem;
+  border: 1px solid #08198e;
+  background-color: #e5f0ff;
+  padding: 9px; }
+  .survey-setting-detail .page-settings > div {
+    width: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 5px; }
+  .survey-setting-detail .page-settings > div.item-visibilities {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 5px; }
+  .survey-setting-detail .page-settings table {
+    width: 100%;
+    border-collapse: collapse; }
+  .survey-setting-detail .page-settings td {
+    border: 1px solid black;
+    text-align: center;
+    line-height: 1.2;
+    padding: 0 !important; }
+  .survey-setting-detail .page-settings th {
+    border: 1px solid black;
+    background-color: #7fb5ff;
+    text-align: center;
+    line-height: 1.2;
+    padding: 0 !important; }
+
+.question-detail {
+  font-size: 0.875rem;
+  border: 1px solid #08198e;
+  background-color: #e5f0ff;
+  padding: 9px; }
+  .question-detail > div {
+    width: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 5px; }
+  .question-detail > div.item-visibilities {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 5px; }
+  .question-detail table {
+    width: 100%;
+    border-collapse: collapse; }
+  .question-detail td {
+    border: 1px solid black;
+    text-align: center;
+    line-height: 1.2;
+    padding: 0 !important; }
+  .question-detail th {
+    border: 1px solid black;
+    background-color: #7fb5ff;
+    text-align: center;
+    line-height: 1.2;
+    padding: 0 !important; }
+
+.page-settings {
+  font-size: 0.875rem;
+  border: 1px solid green;
+  background-color: #e6f6d7;
+  padding: 9px; }
+  .page-settings > div {
+    width: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 5px; }
+  .page-settings > div.item-visibilities {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 5px; }
+  .page-settings table {
+    width: 100%;
+    border-collapse: collapse; }
+  .page-settings td {
+    border: 1px solid black;
+    text-align: center;
+    line-height: 1.2;
+    padding: 0 !important; }
+  .page-settings th {
+    border: 1px solid black;
+    background-color: #b2e384;
+    text-align: center;
+    line-height: 1.2;
+    padding: 0 !important; }
+
+.questionsEditBox {
+  margin-bottom: 10px; }
+
+.output-no {
+  background-color: #312;
+  border: 1px solid #756;
+  border-radius: 20px;
+  color: #fff;
+  padding: 1px 7px;
+  margin: 0 3px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 250px;
+  overflow: hidden; }
+
+.enq-title__branch {
+  display: none; }
+
+.fixed-value {
+  background-color: #009e14;
+  border: 1px solid #009e14;
+  border-radius: 20px;
+  color: #fff;
+  padding: 1px 7px;
+  margin: 0 3px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 250px;
+  overflow: hidden; }
+
+.answer-value {
+  background-color: #fcc;
+  border: 1px solid #f7024b;
+  border-radius: 20px;
+  color: #f7024b;
+  padding: 1px 7px;
+  margin: 0 3px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 250px;
+  overflow: hidden; }
+
+.branch-editor-container .branch-editor .branch-editor-header,
+.branch-editor-container .branch-editor .condition-editor {
+  display: flex;
+  flex-direction: row;
+  width: 700px;
+  align-items: center; }
+
+.detail-mode .branch-editor span {
+  padding: 1px 7px; }
+
+/*# sourceMappingURL=detail.css.map */
